[package]
name = "aqua-ft"
version = "0.1.0"
edition = "2021"
authors = ["Slimedragon <4sliman4@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "^4.1.1"
near-sdk-contract-tools = "2.1.0"

[patch.crates-io]
parity-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
